Regression(Mojave): Resuming a WK2 download crashes https://bugs.webkit.org/show_bug.cgi?id=189838 <rdar://problem/44618538>

Reviewed by Alex Christensen.

Update our workaround to tweak the download resume data to include the actual download path so that
it works on macOS Mojave and up. Unfortunately, the resume data internal representation has changed,
causing our previous workaround to fail.

* NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::resume):


Canonical link: https://commits.webkit.org/204801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236343 268f45cc-cd09-0410-ab3c-d52691b4dbfc